bk_ida/gobmkida/c3/gg_sort
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:756:18: error: expected expression
v25 = *( _OWORD *)&v10[v24]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:756:10: error: use of undeclared identifier '_OWORD'
v25 = *( _OWORD *)&v10[v24]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:757:18: error: expected expression
v26 = *( _OWORD *)&v10[v24 + 16]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:757:10: error: use of undeclared identifier '_OWORD'
v26 = *( _OWORD *)&v10[v24 + 16]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:758:18: error: expected expression
v27 = *( _OWORD *)&v8[v24 + 16]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:758:10: error: use of undeclared identifier '_OWORD'
v27 = *( _OWORD *)&v8[v24 + 16]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:759:12: error: expected expression
*( _OWORD *)&v10[v24] = *( _OWORD *)&v8[v24]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:759:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24] = *( _OWORD *)&v8[v24]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:759:36: error: expected expression
*( _OWORD *)&v10[v24] = *( _OWORD *)&v8[v24]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:759:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24] = *( _OWORD *)&v8[v24]; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:760:12: error: expected expression
*( _OWORD *)&v10[v24 + 16] = v27; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:760:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24 + 16] = v27; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:761:12: error: expected expression
*( _OWORD *)&v8[v24] = v25; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:761:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v24] = v25; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:762:12: error: expected expression
*( _OWORD *)&v8[v24 + 16] = v26; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:762:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v24 + 16] = v26; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:763:18: error: expected expression
v28 = *( _OWORD *)&v10[v24 + 32]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:763:10: error: use of undeclared identifier '_OWORD'
v28 = *( _OWORD *)&v10[v24 + 32]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:764:18: error: expected expression
v29 = *( _OWORD *)&v10[v24 + 48]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:764:10: error: use of undeclared identifier '_OWORD'
v29 = *( _OWORD *)&v10[v24 + 48]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:765:18: error: expected expression
v30 = *( _OWORD *)&v8[v24 + 48]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:765:10: error: use of undeclared identifier '_OWORD'
v30 = *( _OWORD *)&v8[v24 + 48]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:766:12: error: expected expression
*( _OWORD *)&v10[v24 + 32] = *( _OWORD *)&v8[v24 + 32]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:766:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24 + 32] = *( _OWORD *)&v8[v24 + 32]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:766:41: error: expected expression
*( _OWORD *)&v10[v24 + 32] = *( _OWORD *)&v8[v24 + 32]; 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:766:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24 + 32] = *( _OWORD *)&v8[v24 + 32]; 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:767:12: error: expected expression
*( _OWORD *)&v10[v24 + 48] = v30; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:767:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24 + 48] = v30; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:768:12: error: expected expression
*( _OWORD *)&v8[v24 + 32] = v28; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:768:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v24 + 32] = v28; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:769:12: error: expected expression
*( _OWORD *)&v8[v24 + 48] = v29; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:769:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v24 + 48] = v29; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:777:18: error: expected expression
v31 = *( _OWORD *)&v10[v24]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:777:10: error: use of undeclared identifier '_OWORD'
v31 = *( _OWORD *)&v10[v24]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:778:18: error: expected expression
v32 = *( _OWORD *)&v10[v24 + 16]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:778:10: error: use of undeclared identifier '_OWORD'
v32 = *( _OWORD *)&v10[v24 + 16]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:779:18: error: expected expression
v33 = *( _OWORD *)&v8[v24 + 16]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:779:10: error: use of undeclared identifier '_OWORD'
v33 = *( _OWORD *)&v8[v24 + 16]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:780:12: error: expected expression
*( _OWORD *)&v10[v24] = *( _OWORD *)&v8[v24]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:780:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24] = *( _OWORD *)&v8[v24]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:780:36: error: expected expression
*( _OWORD *)&v10[v24] = *( _OWORD *)&v8[v24]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:780:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24] = *( _OWORD *)&v8[v24]; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:781:12: error: expected expression
*( _OWORD *)&v10[v24 + 16] = v33; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:781:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10[v24 + 16] = v33; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:782:12: error: expected expression
*( _OWORD *)&v8[v24] = v31; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:782:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v24] = v31; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:783:12: error: expected expression
*( _OWORD *)&v8[v24 + 16] = v32; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/utils/gg_utils.c:783:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v24 + 16] = v32; 
   ^
48 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gg_sort/src/obj/5/gg_utils.o] Error 1
